# mke_clientlib

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py
examples/: example_experiment.ipynb  example_experiment.py  testing.ipynb
src/mk_clientlib/: mke_rimlib.py
src/mk_clientlib.py/: mke_rimlib.py
src/mke_client/: filesys_storage_api.py  helpers.py  locallib.py  rimlib.py
src/mke_clientlib/: remexlib.py
tests/: test_locallib.py
