[metadata]
description-file=README.md
license_files=LICENSE.rst

name = mke_clientlib
version = 0.1.1
author = Tobias Glaubach
author_email = tglaubach@mpifr-bonn.mpg.de
description = MeerKAT Extension (MKE) (r)emote (i)nterface (m)anagement (lib)rary
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/TobiasGlaubach/mke_clientlib
project_urls =
    Bug Tracker = https://github.com/TobiasGlaubach/mke_clientlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    
[options]
packages = find:
python_requires = >=3.8


